fix: broken ui when app/action name is long
fixes #860

--- a/apps/client/src/flogo/home/apps-list/apps-list.component.less
+++ b/apps/client/src/flogo/home/apps-list/apps-list.component.less
@@ -59,6 +59,9 @@
   line-height: 1.4;
   margin-top: 0;
   margin-bottom: 0.4rem;
+  width: 98%;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .app__description,
